--- a/glasir_api/requirements.txt
+++ b/glasir_api/requirements.txt
@@ -1,599 +1,15 @@
-absl-py==2.2.0
-accelerate==0.32.1
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.8.5
-aiosignal==1.3.2
-aiosqlite==0.21.0
-albucore==0.0.23
-albumentations==1.4.24
-annotated-types==0.7.0
-antlr4-python3-runtime==4.7.2
-anyio==4.8.0
-appdirs==1.4.4
-appnope==0.1.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-async-timeout==4.0.3
-asyncio==3.4.3
-attrs==25.1.0
-autoflake==2.3.1
-babel==2.17.0
-backoff==2.2.1
-base64io==1.0.3
-beautifulsoup4==4.12.2
-bitsandbytes==0.42.0
-black==25.1.0
-bleach==6.2.0
-blinker==1.9.0
-Brotli==1.1.0
-browserbase==1.2.0
-cachetools==5.5.2
-cairocffi==1.7.1
-CairoSVG==2.7.1
-certifi==2025.1.31
-cffi==1.17.1
-chardet==3.0.4
-charset-normalizer==3.4.1
-# Editable install with no version control (chemvlm-optimization==0.1.0)
--e /Users/rokur/Documents/Downloader
-chess==1.11.2
-click==8.1.8
-click-spinner==0.1.10
-cloudscraper==1.2.71
-cmake==3.31.6
-comm==0.2.2
-contourpy==1.3.1
-coverage==7.8.0
-cryptography==41.0.7
-cssselect2==0.8.0
-cycler==0.12.1
-Cython==3.0.12
-dataclasses-json==0.6.7
-datasets==3.3.2
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-dep-logic==0.4.11
-depender==0.1.2
-Deprecated==1.2.18
-diffusers==0.32.2
-dill==0.3.8
-distlib==0.3.9
-distro==1.9.0
-docstring_parser==0.16
-easyocr==1.7.2
-ecdsa==0.19.1
-einops==0.8.1
-emoji==2.14.1
-entmax==1.3
-eval_type_backport==0.2.2
-exceptiongroup==1.2.2
-executing==2.2.0
-faiss-cpu==1.10.0
-fastapi==0.109.0
-fastjsonschema==2.21.1
-ffmpeg==1.4
-ffmpy==0.5.0
-filelock==3.17.0
-filetype==1.2.0
-findpython==0.6.3
-Flask==3.1.0
-Flask-WTF==1.2.2
-flatbuffers==25.2.10
-fonttools==4.56.0
-fqdn==1.5.1
-frozenlist==1.5.0
-fsspec==2024.12.0
-git-lfs==1.6
-google-ai-generativelanguage==0.4.0
-google-api-core==2.24.1
-google-auth==2.38.0
-google-cloud-aiplatform==1.88.0
-google-cloud-bigquery==3.31.0
-google-cloud-core==2.4.2
-google-cloud-resource-manager==1.14.2
-google-cloud-storage==2.19.0
-google-cloud-translate==3.20.1
-google-crc32c==1.7.1
-google-generativeai==0.3.2
-google-resumable-media==2.7.2
-googleapis-common-protos==1.59.1
-googletrans==4.0.0rc1
-gradio==5.23.0
-gradio_client==1.8.0
-graphviz==0.20.3
-greenlet==3.1.1
-groovy==0.1.2
-grpc-google-iam-v1==0.14.0
-grpcio==1.70.0
-grpcio-status==1.63.0rc1
-h11==0.14.0
-h2==3.2.0
-hf_transfer==0.1.9
-hishel==0.1.2
-hpack==3.0.0
-hstspreload==2025.1.1
-html5lib==1.1
-httpcore==1.0.7
-httpx==0.26.0
-httpx-sse==0.4.0
-huggingface-hub==0.29.1
-hyperframe==5.2.0
-icalendar==5.0.11
-idna==2.10
-imageio==2.37.0
-importlib_metadata==8.6.1
-iniconfig==2.0.0
-installer==0.7.0
-ipykernel==6.29.5
-ipython==8.35.0
-ipywidgets==8.1.6
-isoduration==20.11.0
-isort==6.0.1
-itsdangerous==2.2.0
-jax==0.5.3
-jaxlib==0.5.3
-jedi==0.19.2
-Jinja2==3.1.5
-jiter==0.8.2
-joblib==1.4.2
-json5==0.12.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.0
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.14
-keyboard==0.13.5
-kiwisolver==1.4.8
-langchain==0.3.23
-langchain-community==0.3.21
-langchain-core==0.3.51
-langchain-google-vertexai==2.0.20
-langchain-text-splitters==0.3.8
-langdetect==1.0.9
-langsmith==0.3.11
-latex2sympy2==1.9.1
-lazy_loader==0.4
-Levenshtein==0.27.1
-lightning==2.5.0.post0
-lightning-utilities==0.12.0
-line_profiler==4.2.0
-lxml==5.3.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-mediapipe==0.10.21
-mistune==3.1.3
-ml_dtypes==0.5.1
-mlx==0.23.1
-mlx-lm==0.21.4
-MouseInfo==0.1.3
-mpmath==1.3.0
-msgpack==1.1.0
-mss==10.0.0
-multidict==6.1.0
-multiprocess==0.70.16
-munch==4.0.0
-mypy-extensions==1.0.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-ninja==1.11.1.3
-nltk==3.9.1
-notebook==7.4.0
-notebook_shim==0.2.4
-nougat-ocr==0.1.17
-npm==0.1.1
-numpy==1.26.4
-olefile==0.47
-openai==1.65.2
-opencv-contrib-python==4.11.0.86
-opencv-python==4.8.1.78
-opencv-python-headless==4.11.0.86
-opentelemetry-api==1.31.1
-opentelemetry-exporter-jaeger==1.21.0
-opentelemetry-exporter-jaeger-proto-grpc==1.21.0
-opentelemetry-exporter-jaeger-thrift==1.21.0
-opentelemetry-instrumentation==0.52b1
-opentelemetry-instrumentation-httpx==0.52b1
-opentelemetry-sdk==1.31.1
-opentelemetry-semantic-conventions==0.52b1
-opentelemetry-util-http==0.52b1
-opt_einsum==3.4.0
-optimum==1.24.0
-optional-django==0.1.0
-orjson==3.9.10
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pathlib==1.0.1
-pathspec==0.12.1
-pbs-installer==2025.3.17
-pdf2image==1.17.0
-# Editable install with no version control (pdf_splitter_modular==0.1.0)
--e /Users/rokur/Documents/Alisfrøði solve/pdf_splitter_modular
-pdfminer.six==20240706
-pdm==2.23.0
-peft==0.14.0
-pexpect==4.9.0
-Pillow==10.1.0
-pix2tex==0.1.4
-pixi==1.0.1
-pixiv-api==0.3.7
-platformdirs==4.3.6
-playwright==1.51.0
-pluggy==1.5.0
-praw==7.8.1
-prawcore==2.4.0
-prometheus_client==0.21.1
-prompt_toolkit==3.0.50
-propcache==0.3.0
-proto-plus==1.26.0
-protobuf==4.25.6
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py==1.11.0
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-PyAutoGUI==0.9.54
-pyclipper==1.3.0.post6
-pycparser==2.22
-pydantic==2.5.3
-pydantic-settings==2.8.1
-pydantic_core==2.14.6
-pydeps==3.0.1
-pydub==0.25.1
-pydyf==0.11.0
-pyee==12.1.1
-pyflakes==3.3.2
-pyftrace==0.3.1
-PyGetWindow==0.0.9
-Pygments==2.19.1
-PyJWT==2.10.1
-PyMsgBox==1.0.9
-PyMuPDF==1.25.3
-pynput==1.8.0
-pyobjc==11.0
-pyobjc-core==11.0
-pyobjc-framework-Accessibility==11.0
-pyobjc-framework-Accounts==11.0
-pyobjc-framework-AddressBook==11.0
-pyobjc-framework-AdServices==11.0
-pyobjc-framework-AdSupport==11.0
-pyobjc-framework-AppleScriptKit==11.0
-pyobjc-framework-AppleScriptObjC==11.0
-pyobjc-framework-ApplicationServices==11.0
-pyobjc-framework-AppTrackingTransparency==11.0
-pyobjc-framework-AudioVideoBridging==11.0
-pyobjc-framework-AuthenticationServices==11.0
-pyobjc-framework-AutomaticAssessmentConfiguration==11.0
-pyobjc-framework-Automator==11.0
-pyobjc-framework-AVFoundation==11.0
-pyobjc-framework-AVKit==11.0
-pyobjc-framework-AVRouting==11.0
-pyobjc-framework-BackgroundAssets==11.0
-pyobjc-framework-BrowserEngineKit==11.0
-pyobjc-framework-BusinessChat==11.0
-pyobjc-framework-CalendarStore==11.0
-pyobjc-framework-CallKit==11.0
-pyobjc-framework-Carbon==11.0
-pyobjc-framework-CFNetwork==11.0
-pyobjc-framework-Cinematic==11.0
-pyobjc-framework-ClassKit==11.0
-pyobjc-framework-CloudKit==11.0
-pyobjc-framework-Cocoa==11.0
-pyobjc-framework-Collaboration==11.0
-pyobjc-framework-ColorSync==11.0
-pyobjc-framework-Contacts==11.0
-pyobjc-framework-ContactsUI==11.0
-pyobjc-framework-CoreAudio==11.0
-pyobjc-framework-CoreAudioKit==11.0
-pyobjc-framework-CoreBluetooth==11.0
-pyobjc-framework-CoreData==11.0
-pyobjc-framework-CoreHaptics==11.0
-pyobjc-framework-CoreLocation==11.0
-pyobjc-framework-CoreMedia==11.0
-pyobjc-framework-CoreMediaIO==11.0
-pyobjc-framework-CoreMIDI==11.0
-pyobjc-framework-CoreML==11.0
-pyobjc-framework-CoreMotion==11.0
-pyobjc-framework-CoreServices==11.0
-pyobjc-framework-CoreSpotlight==11.0
-pyobjc-framework-CoreText==11.0
-pyobjc-framework-CoreWLAN==11.0
-pyobjc-framework-CryptoTokenKit==11.0
-pyobjc-framework-DataDetection==11.0
-pyobjc-framework-DeviceCheck==11.0
-pyobjc-framework-DeviceDiscoveryExtension==11.0
-pyobjc-framework-DictionaryServices==11.0
-pyobjc-framework-DiscRecording==11.0
-pyobjc-framework-DiscRecordingUI==11.0
-pyobjc-framework-DiskArbitration==11.0
-pyobjc-framework-DVDPlayback==11.0
-pyobjc-framework-EventKit==11.0
-pyobjc-framework-ExceptionHandling==11.0
-pyobjc-framework-ExecutionPolicy==11.0
-pyobjc-framework-ExtensionKit==11.0
-pyobjc-framework-ExternalAccessory==11.0
-pyobjc-framework-FileProvider==11.0
-pyobjc-framework-FileProviderUI==11.0
-pyobjc-framework-FinderSync==11.0
-pyobjc-framework-FSEvents==11.0
-pyobjc-framework-GameCenter==11.0
-pyobjc-framework-GameController==11.0
-pyobjc-framework-GameKit==11.0
-pyobjc-framework-GameplayKit==11.0
-pyobjc-framework-HealthKit==11.0
-pyobjc-framework-ImageCaptureCore==11.0
-pyobjc-framework-InputMethodKit==11.0
-pyobjc-framework-InstallerPlugins==11.0
-pyobjc-framework-InstantMessage==11.0
-pyobjc-framework-Intents==11.0
-pyobjc-framework-IntentsUI==11.0
-pyobjc-framework-IOBluetooth==11.0
-pyobjc-framework-IOBluetoothUI==11.0
-pyobjc-framework-IOSurface==11.0
-pyobjc-framework-iTunesLibrary==11.0
-pyobjc-framework-KernelManagement==11.0
-pyobjc-framework-LatentSemanticMapping==11.0
-pyobjc-framework-LaunchServices==11.0
-pyobjc-framework-libdispatch==11.0
-pyobjc-framework-libxpc==11.0
-pyobjc-framework-LinkPresentation==11.0
-pyobjc-framework-LocalAuthentication==11.0
-pyobjc-framework-LocalAuthenticationEmbeddedUI==11.0
-pyobjc-framework-MailKit==11.0
-pyobjc-framework-MapKit==11.0
-pyobjc-framework-MediaAccessibility==11.0
-pyobjc-framework-MediaExtension==11.0
-pyobjc-framework-MediaLibrary==11.0
-pyobjc-framework-MediaPlayer==11.0
-pyobjc-framework-MediaToolbox==11.0
-pyobjc-framework-Metal==11.0
-pyobjc-framework-MetalFX==11.0
-pyobjc-framework-MetalKit==11.0
-pyobjc-framework-MetalPerformanceShaders==11.0
-pyobjc-framework-MetalPerformanceShadersGraph==11.0
-pyobjc-framework-MetricKit==11.0
-pyobjc-framework-MLCompute==11.0
-pyobjc-framework-ModelIO==11.0
-pyobjc-framework-MultipeerConnectivity==11.0
-pyobjc-framework-NaturalLanguage==11.0
-pyobjc-framework-NetFS==11.0
-pyobjc-framework-Network==11.0
-pyobjc-framework-NetworkExtension==11.0
-pyobjc-framework-NotificationCenter==11.0
-pyobjc-framework-OpenDirectory==11.0
-pyobjc-framework-OSAKit==11.0
-pyobjc-framework-OSLog==11.0
-pyobjc-framework-PassKit==11.0
-pyobjc-framework-PencilKit==11.0
-pyobjc-framework-PHASE==11.0
-pyobjc-framework-Photos==11.0
-pyobjc-framework-PhotosUI==11.0
-pyobjc-framework-PreferencePanes==11.0
-pyobjc-framework-PushKit==11.0
-pyobjc-framework-Quartz==11.0
-pyobjc-framework-QuickLookThumbnailing==11.0
-pyobjc-framework-ReplayKit==11.0
-pyobjc-framework-SafariServices==11.0
-pyobjc-framework-SafetyKit==11.0
-pyobjc-framework-SceneKit==11.0
-pyobjc-framework-ScreenCaptureKit==11.0
-pyobjc-framework-ScreenSaver==11.0
-pyobjc-framework-ScreenTime==11.0
-pyobjc-framework-ScriptingBridge==11.0
-pyobjc-framework-SearchKit==11.0
-pyobjc-framework-Security==11.0
-pyobjc-framework-SecurityFoundation==11.0
-pyobjc-framework-SecurityInterface==11.0
-pyobjc-framework-SensitiveContentAnalysis==11.0
-pyobjc-framework-ServiceManagement==11.0
-pyobjc-framework-SharedWithYou==11.0
-pyobjc-framework-SharedWithYouCore==11.0
-pyobjc-framework-ShazamKit==11.0
-pyobjc-framework-Social==11.0
-pyobjc-framework-SoundAnalysis==11.0
-pyobjc-framework-Speech==11.0
-pyobjc-framework-SpriteKit==11.0
-pyobjc-framework-StoreKit==11.0
-pyobjc-framework-Symbols==11.0
-pyobjc-framework-SyncServices==11.0
-pyobjc-framework-SystemConfiguration==11.0
-pyobjc-framework-SystemExtensions==11.0
-pyobjc-framework-ThreadNetwork==11.0
-pyobjc-framework-UniformTypeIdentifiers==11.0
-pyobjc-framework-UserNotifications==11.0
-pyobjc-framework-UserNotificationsUI==11.0
-pyobjc-framework-VideoSubscriberAccount==11.0
-pyobjc-framework-VideoToolbox==11.0
-pyobjc-framework-Virtualization==11.0
-pyobjc-framework-Vision==11.0
-pyobjc-framework-WebKit==11.0
-pypandoc==1.15
-pyparsing==3.2.1
-pypdf==5.4.0
-PyPDF2==3.0.1
-pypdfium2==4.30.0
-pyperclip==1.9.0
-pyphen==0.17.2
-pyproject_hooks==1.2.0
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.16
-PyQt5_sip==12.17.0
-PyQt6==6.8.1
-PyQt6-Qt6==6.8.2
-PyQt6-WebEngine==6.8.0
-PyQt6-WebEngine-Qt6==6.8.2
-PyQt6_sip==13.10.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySide6==6.8.2.1
-PySide6_Addons==6.8.2.1
-PySide6_Essentials==6.8.2.1
-PySimpleGUI==5.0.8.3
-PySocks==1.7.1
-pytesseract==0.3.10
-pytest==8.3.5
-pytest-asyncio==0.26.0
-pytest-asyncio-cooperative==0.37.0
-pytest-cov==6.1.1
-python-bidi==0.6.6
-python-chess==1.999
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.0
-python-iso639==2025.2.18
-python-jose==3.3.0
-python-json-logger==3.3.0
-python-Levenshtein==0.27.1
-python-magic==0.4.27
-python-markdown-math==0.8
-python-multipart==0.0.20
-python-oxmsg==0.0.2
-python-slugify==8.0.4
-pytorch-lightning==2.5.0.post0
-pyttsx3==2.98
-pytube==12.1.2
-pytweening==1.2.0
-pytz==2025.1
-PyYAML==6.0.2
-pyzmq==26.4.0
-RapidFuzz==3.12.2
-rdkit==2024.9.5
-# Editable install with no version control (reddit-fetcher==0.1.0)
--e /Users/rokur/Desktop/AI Shorts/Reddit fetcher
-referencing==0.36.2
-regex==2024.11.6
-requests==2.31.0
-requests-toolbelt==1.0.0
-resolvelib==1.1.0
-retry==0.9.2
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.24.0
-rsa==4.9
-ruamel.yaml==0.18.10
-ruamel.yaml.clib==0.2.12
-rubicon-objc==0.5.0
-ruff==0.11.2
-rumps==0.4.0
-safehttpx==0.1.6
-safetensors==0.5.3
-scikit-image==0.25.2
-scipy==1.15.2
-sconf==0.2.5
-screeninfo==0.8.1
-selenium==4.30.0
-semantic-version==2.10.0
-Send2Trash==1.8.3
-sentencepiece==0.2.0
-shapely==2.0.7
-shellingham==1.5.4
-shiboken6==6.8.2.1
-simsimd==6.2.1
-six==1.17.0
-snakeviz==2.2.2
-sniffio==1.3.1
-socksio==1.0.0
-sortedcontainers==2.4.0
-sounddevice==0.5.1
-soupsieve==2.6
-SQLAlchemy==2.0.25
-stack-data==0.6.3
-starlette==0.35.1
-stdlib-list==0.11.1
-stringzilla==3.12.2
-surya-ocr==0.13.0
-sympy==1.13.1
-tenacity==9.0.0
-terminado==0.18.1
-text-unidecode==1.3
-thrift==0.21.0
-tifffile==2025.3.13
-tiktoken==0.9.0
-timm==0.9.12
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tk==0.1.0
-tokenizers==0.21.0
-tomli==2.2.1
-tomlkit==0.13.2
-torch==2.6.0
-torchaudio==2.6.0
-torchmetrics==1.6.2
-torchvision==0.21.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.49.0
-trio==0.29.0
-trio-websocket==0.12.2
-truststore==0.10.1
-ttkthemes==3.2.2
-typer==0.15.2
-types-python-dateutil==2.9.0.20241206
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-tzdata==2025.1
-unearth==0.17.3
-unstructured==0.17.2
-unstructured-client==0.32.3
-update-checker==0.18.0
-uri-template==1.3.0
-urllib3==2.3.0
-uv==0.6.10
-uvicorn==0.27.0
-uvloop==0.21.0
-validators==0.34.0
-virtualenv==20.30.0
-vulture==2.14
-wcwidth==0.2.13
-weasyprint==65.0
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.3
-widgetsnbextension==4.0.14
-wrapt==1.17.2
-wsproto==1.2.0
-WTForms==3.2.1
-x-transformers==0.15.0
-xxhash==3.5.0
-yappi==1.6.10
-yarl==1.18.3
-yt-dlp==2025.2.19
-zipp==3.21.0
-zopfli==0.2.3.post1
-zstandard==0.23.0
+fastapi
+uvicorn[standard] # Includes standard dependencies like websockets, needed for development server
+httpx
+beautifulsoup4
+lxml
+pydantic
+cachetools
+aiofiles
+orjson
+
+sqlalchemy
+databases[sqlite]
+python-dotenv
+alembic
+fastapi-limiter
